[tool.poetry]
name = "climbing-cnn-deploy"
version = "0.1.0"
description = ""
authors = ["Brayden-L <braydenmlevy@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.31.1"
pandas = "^2.2.1"
seaborn = "^0.13.2"
numpy = "^1.26.4"
torch = "^2.2.1"
torchvision = "^0.17.1"
natsort = "^8.4.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
